# wonderbot-v10-8-remote-av-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude-grafana-convo.txt  docker-compose.yml  handover.md  handover_document.md  petey-main-convo.txt  pyproject.toml  run_bridge_client_realtek_live_lite.bat  run_wonderbot_live_lite.sh  slim.txt  wonderbot.txt
configs/: default.toml
configs/profiles/: big-machine-dual-gpu-template.toml  current-box-cpu.toml  current-box-p1000.toml  dual-p40-server-qwen14b-remote-bridge-fp16-no-enrich-lowmem.toml  dual-p40-server-qwen14b-remote-bridge-fp16-no-enrich-midmem.toml  dual-p40-server-qwen14b-remote-bridge-fp16-no-enrich.toml  dual-p40-server-qwen14b-remote-bridge-fp16-stt-base-cpu-sensitive.toml  dual-p40-server-qwen14b-remote-bridge-fp16-stt-cpu.toml  dual-p40-server-qwen14b-remote-bridge-fp16-stt-tiny-cpu-sensitive.toml  dual-p40-server-qwen14b-remote-bridge-fp16-stt-tiny-cpu.toml  dual-p40-server-qwen14b-remote-bridge-fp16.toml  dual-p40-server-qwen14b-remote-bridge.toml  dual-p40-server-qwen14b.toml  dual-p40-server-qwen32b-experimental.toml
docs/: CONTAINER_DEPLOYMENT.md  DUAL_P40_SERVER_DEPLOYMENT.md  REMOTE_AV_BRIDGE.md  SPEECH_TURN_REPAIR.md  hardware_profiles.md
launch-kit/: common.sh  server-health.sh  server-start-bridge.sh  server-start-cli.sh  server-stop-all.sh  server-stop-bridge.sh  server-tail-bridge-log.sh  surface-start-wonderbot-bridge.ps1
scripts/server/: bootstrap_dual_p40_ubuntu22.sh  docker-entrypoint.sh  verify_dual_p40.py
systemd/: wonderbot-dual-p40.service
tests/: test_live_perception.py  test_phase10_5_3_microphone.py  test_phase10_5_4_live_reply_gating.py  test_phase10_5_7_speech_turns.py  test_phase4_multimodal.py
wonderbot/: agent.py  bridge.py  bridge.py.pre-uploadfile-fix  cli.py  cli.py.pre-direct-sensor-commands-20260611-221027  cli.py.pre-light-sense-summary-20260611-214111  cli.py.pre-safe-deterministic-sense-summary-20260611-214258  cli.py.pre-sense-ask-20260611-214633  config.py  diagnostics.py  llm_backends.py  llm_backends.py.broken-runtime-eager-20260611-215000  llm_backends.py.broken-think-strip  llm_backends.py.current-broken-20260611-203852  llm_backends.py.pre-p40-eager-lowvram  llm_backends.py.pre-runtime-force-eager-20260611-214827  llm_backends.py.pre-safe-no-thinking-20260611-204229  tts.py
wonderbot/sensors/: camera.py  emotion_lite.py  hub.py  microphone.py  (+2 more)
(+1 files in other folders)
